--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :thumbnail %>
-    <%= form.file_field :thumbnail %>
+    <%= form.label :image %> #thumbnailをimageへ変更
+    <%= form.file_field :image %> #thumbnailをimageへ変更
   </div>
 
   <div class="actions">
