--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :image %> #thumbnailをimageへ変更
-    <%= form.file_field :image %> #thumbnailをimageへ変更
+    <%= form.label :thumbnail %> #imageからhumbnailへ再度変更
+    <%= form.file_field :thumbnail %> #imageからthumbnailへ再度変更
   </div>
 
   <div class="actions">
