--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= blog.title %></td>
         <td><%= blog.content %></td>
-        <td><%= image_tag blog.thumbnail.variant(resize_to_limit: [200, 200]) if blog.thumbnail.present? %></td>
+        <td><%= image_tag blog.thumbnail.variant(resize_to_limit: [200, 200]) if blog.thumbnail.present? %></td> #thumbnailへ再度変更
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
