--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :thumbnail %> #imageからhumbnailへ再度変更
+    <%= form.label :thumbnail %> #imageからthumbnailへ再度変更
     <%= form.file_field :thumbnail %> #imageからthumbnailへ再度変更
   </div>
 
